@@ -1,3 +1,10 @@
+2021-08-06  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-plinks.el (ee-find-callprocess00-exit-status): new variable.
+	(find-callprocess00-ne): use `ee-find-callprocess00-exit-status'.
+	(find-wget): use `ee-find-callprocess00-exit-status'.
+	(find-wgeta): new function.
+
 2021-07-09  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-newbrowser-links): new function.
